<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin5"
        android:paddingTop="@dimen/padding_cardview"
        android:paddingLeft="@dimen/padding_general_content"
        android:paddingRight="@dimen/padding_general_content">

        <LinearLayout
            android:id="@+id/noteResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteConferenceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conferenceTitleText"
                style="@style/styleTitles"/>

            <TextView
                android:id="@+id/conferenceNoteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="@dimen/padding_cardview"
                android:layout_marginBottom="@dimen/padding_cardview"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right">

            <ImageButton
                android:id="@+id/shareNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_share"/>

            <Button
                android:id="@+id/editNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:textColor="@color/buttons"
                android:background="@color/transparent"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_divider"
        android:background="@color/deviders"
        android:layout_marginTop="@dimen/margin5"
        />

</LinearLayout>