<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:style="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/speakerListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin5"
        android:paddingTop="@dimen/padding_cardview"
        android:paddingBottom="@dimen/padding_cardview"
        android:paddingLeft="@dimen/padding_general_content"
        android:paddingRight="@dimen/padding_general_content"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/userThumb"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:src="@android:drawable/sym_def_app_icon"
            app:civ_border_width="1dp"
            app:civ_border_color="#ffffff"
            android:layout_weight=".2"
            android:transitionName="@string/transitionname"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin5"
            android:weightSum="1"
            android:layout_weight=".8">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                style="@style/styleTitles"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9">

                    <TextView
                        android:id="@+id/speakerConference"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conferenceTitleText"
                        android:textSize="@dimen/font_size_14"/>

                </LinearLayout>
                <Button
                    android:id="@+id/viewSpeakerInfo"
                    android:layout_width="@dimen/width_and_height_button_small"
                    android:layout_height="@dimen/width_and_height_button_small"
                    android:background="@drawable/ic_chevron_right"
                    android:layout_gravity="right"
                    android:layout_weight=".1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/speakerPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaker_position"
                android:textSize="@dimen/font_size_14" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_divider"
        android:background="@color/deviders"
        android:layout_marginTop="@dimen/margin5"
        />

</LinearLayout>